# aoi

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.json  pro
src/cpp/: beiguang_aoi.cpp  beiguang_aoi.hpp  main.cpp  test.cpp
src/python/: beiguang_aoi.py  main.py
